--- a/landing.html
+++ b/landing.html
@@ -24,6 +24,7 @@
 							
 							<h6>19:30 | July 10th 2023</h6>
 							<p>A formal invitation to dinner</p>
+							<p>Attire : Formal / Casual</p>
 						<!-- Nav -->
 					</div>
 				</section>
@@ -160,7 +161,6 @@
 						</header>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Note that any further questions and referrals should be forwarded to <b>Tan Jia Wen</b> - Details below</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
@@ -173,6 +173,7 @@
 											</ul>
 									</div>
 								</section>
+								<p>In your response, state your desired <b>Event Attire</b></p>
 							</div>
 						</div>
 					</div>
