--- a/landing.html
+++ b/landing.html
@@ -128,6 +128,25 @@
 													<!-- Highlight -->
 														<article class="box highlight">
 															<header>
+																<h3>Dinner - Tasty Chapati</h3>
+															</header>
+															<a class="image left"><img src="images/tastychapati.jpg" alt="" /></a>
+															<p><b>Genre</b> - North Indian
+																<br> <b>Vibe</b> - Lowkey Fancy Restaurant
+																<br> <b>Pros</b> - Indian Food
+																<br> <b>Cons</b> - Your boyfriend will be in love with something else for the time being
+															</p>
+															<ul class="actions">
+																<li><a href="trust.html" target="_blank" class="button icon solid fa-file">Learn More</a></li>
+															</ul>
+														</article>
+
+												</li>
+												<li>
+
+													<!-- Highlight -->
+														<article class="box highlight">
+															<header>
 																<h3>Supper Snack &#128521 - ?</h3>
 															</header>
 															<a href="#" class="image left"><img src="images/meal.JPG" alt="" /></a>
